<resources>
    <string name="app_name">Controle do Histórico de Doenças em uma Localidade</string>
    <string name="textviewtextViewInformeADoenca">Informe a Doença</string>
    <string name="editTextDoenca" />
    <string name="radiobuttonContagioSimples">Contágio Simples</string>
    <string name="radiobuttonContagioComplexo">Contágio Complexo</string>
    <string name="checkboxPodeLevarAObto">Pode Levar a Óbto?</string>
    <string name="buttonLimpar">Limpar</string>
    <string name="buttonSalvar">Salvar</string>
    <string name="doencaInformada">Doença informada:</string>
    <string name="doencaPodeLevarAObito">Doença pode levar a óbito!</string>
    <string name="doencaNaoLevaAObto">Não!</string>
    <string name="dozeHoras">até 12 horas!</string>
    <string name="vinteEQuatroHoras">até 24 horas!</string>
    <string name="acimaDeVinteQuatroHoras">acima de 24 horas!</string>
    <string name="doencaDeveSerPreenchida">Doença deve ser preenchida!</string>
    <string name="TipoDeContágioDeveSerFornecido">Tipo de contágio deve ser fornecido!</string>
    <string name="textViewInformeoTipoDeContato">Informe o Tipo de Contágio:</string>
    <string name="todosControlesForamReInicializados">Todos controles foram re-inicializados!</string>

    <string name="Variola">Variola</string>
    <string name="Dengue">Dengue</string>
    <string name="Malaria">Malária</string>
    <string name="Xicungunha">Xicungunha</string>
    <string name="AedisEgipi">AedisEgipi</string>
    <string name="FebreAmarela">Febre Amarela</string>
    <string name="Meningite">Meningite</string>
    <string name="Leptospirose">Leptospirose</string>
    <string name="Impetigo">Impetigo</string>
    <string name="Scabiose">Scabiose</string>

    <string name="ContagioVariola">Simples</string>
    <string name="ContagioDengue">Complexo</string>
    <string name="ContagioMalaria">Complexo</string>
    <string name="ContagioXicungunha">Simples</string>
    <string name="ContagioAedisEgipi">Complexo</string>
    <string name="ContagioFebreAmarela">Simples</string>
    <string name="ContagioMeningite">Complexo</string>
    <string name="ContagioLeptospirose">Simples</string>
    <string name="ContagioImpetigo">Complexo</string>
    <string name="ContagioScabiose">Simples</string>

    <string name="doenca">\"Doença: \"</string>
    <string name="foiClicada">\" foi clicada!\"</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

</resources>